minor update (#228)
* chore(api): output object after create/insert/put

* chore(docs): update docs with changes related to insert/create/put

* fix: indent stuff

* fix: indent stuff

* chore(db): backtics on field names for gear

* fix: remove debug output

* chore(docs): swg fmt and model typo fix
