# docs/swagger.yaml
@@ -106,29 +106,6 @@ definitions:
       top_category_name:
         type: string
     type: object
-  models.GearNoID:
-    properties:
-      gear_category_id:
-        type: integer
-      gear_height:
-        type: integer
-      gear_length:
-        type: integer
-      gear_manufacture_id:
-        type: integer
-      gear_name:
-        type: string
-      gear_size_definition:
-        type: string
-      gear_status:
-        type: boolean
-      gear_top_category_id:
-        type: integer
-      gear_weight:
-        type: integer
-      gear_width:
-        type: integer
-    type: object
   models.GearTopCategory:
     properties:
       top_category_id:
@@ -383,7 +360,7 @@ paths:
         "200":
           description: 'status: success when all goes well'
           schema:
-            $ref: '#/definitions/models.Status'
+            $ref: '#/definitions/models.GearCategory'
         default:
           description: ""
           schema:
@@ -544,14 +521,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/models.GearNoID'
+          $ref: '#/definitions/models.Gear'
       produces:
       - application/json
       responses:
         "200":
           description: 'status: success when all goes well'
           schema:
-            $ref: '#/definitions/models.Status'
+            $ref: '#/definitions/models.Gear'
         default:
           description: ""
           schema:
@@ -727,7 +704,7 @@ paths:
         "200":
           description: 'status: success when all goes well'
           schema:
-            $ref: '#/definitions/models.Status'
+            $ref: '#/definitions/models.Manufacture'
         default:
           description: ""
           schema:
